<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    >


    <LinearLayout
        android:id="@+id/layoutSteamMate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_54sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/vyorius"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_28ssp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/video"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_24ssp"
            android:paddingStart="@dimen/_4sdp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/app"
            android:paddingStart="@dimen/_4sdp"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_24ssp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_60sdp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_protocol"
            android:paddingHorizontal="@dimen/_40sdp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <AutoCompleteTextView
                android:id="@+id/dropdownField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_40sdp"
            app:layout_constraintStart_toStartOf="@id/dropDownMenu"
            app:helperText="Enter url of format- rtsp://xxx.xxx.xxx."
            app:layout_constraintEnd_toEndOf="@id/dropDownMenu"
            app:layout_constraintTop_toBottomOf="@id/dropDownMenu">

            <EditText
                android:id="@+id/rtspURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="url"
                android:inputType="textUri"
                android:importantForAutofill="yes"
                android:imeOptions="actionDone"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/streamButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:layout_marginHorizontal="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/stream"
            android:background="@drawable/background_stream_ripple"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/editTextInputLayout"
            app:layout_constraintStart_toStartOf="@id/editTextInputLayout"
            app:layout_constraintEnd_toEndOf="@id/editTextInputLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
